--- a/index.html
+++ b/index.html
@@ -4,9 +4,56 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="script.js"></script>
+    
 </head>
 <body>
-    <h1>PRIMERA ENTREGA</h1>
+    <h1>Segunda Entrega</h1>
+
+
+<form action="">
+   <label for="genero">Genero</label>
+   <select id="genero">
+    <option value=""></option>
+    <option value="masculino">Masculino</option>
+    <option value="femenino">Femenino</option>
+</select>
+
+    <label for="edad">Edad</label>
+    <input type="number" id="edad" min="0"><br><br>
+
+    <label for="Peso">Peso en Kilogramos</label>
+    <input type="number" id="peso" placeholder="50"><br><br>
+
+    <label for="estatura">Estatura en centimetros</label>
+    <input type="number" id="estatura" placeholder="185"><br><br>
+
+    <label for="actividad">Nivel de actividad fisica</label>
+    <select name="" id="actividad">
+        <option value="actividad">Sedentario (Ninguna actividad física)</option>
+        <option value="ligero">Ligero (Actividad física de 2 a 3 veces por semana)</option>
+        <option value="moderado">Moderado (Actividad física 3 veces por semana)</option>
+        <option value="activo">Activo (Actividad física 4 veces por semana)</option>
+        <option value="muy-activo">Muy activo (Actividad física 5 o mas veces por semana)</option>
+
+
+    </select>
+
+    <button type="button" onclick="calcularCalorias()" >Calcular</button>
+
+    <p id="resultado"></p>
+
+</form>
+
+
+
+
+
+
+
+
+
+
+
+<script src="script.js"></script>
 </body>
 </html>
