--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     <label for="actividad">Nivel de actividad fisica</label>
     <select name="" id="actividad">
-        <option value="actividad">Sedentario (Ninguna actividad física)</option>
+        <option value="sedentario">Sedentario (Ninguna actividad física)</option>
         <option value="ligero">Ligero (Actividad física de 2 a 3 veces por semana)</option>
         <option value="moderado">Moderado (Actividad física 3 veces por semana)</option>
         <option value="activo">Activo (Actividad física 4 veces por semana)</option>
